<resources>
    <string name="app_name">Cleanpro</string>
    <string name="app_next">Next</string>
    <string name="app_complete">Complete</string>
    <string name="app_cancel">Cancel</string>
    <string name="app_confirm">Confirm</string>
    <string name="app_success">Success!</string>
    <string name="app_coming_soon">Coming soon</string>
    <string name="app_press_again_exit">Press again to exit</string>
    <string name="tip_no_data">No Record!</string>
    <string name="tip_load_data">Data loading&#8230;</string>
    <string name="tip_load_error">Error loading!\n\nClick retry&#8230;</string>
    <string name="lm_recycler_reload">Failed to load, click reload</string>
    <string name="lm_recycler_no_more">No more data</string>
    <string name="lm_recycler_load_more">Load more</string>
    <string name="app_connect_error">Network error</string>
    <string name="app_connect_timeout">Connection timeout</string>
    <string name="app_request_timeout">Request timeout</string>
    <string name="app_parse_error">Parse error</string>
    <string name="app_unknown_error">Unknown error</string>
    <string name="app_response_error">Response error：</string>
    <string name="app_response_empty">Response empty</string>
    <string name="app_system_error">System error:</string>
    <string name="app_invalid_qrcode">Invalid qr code</string>
    <string name="main_bottom_nav_home">Home</string>
    <string name="main_bottom_nav_nearby">Nearby</string>
    <string name="main_bottom_nav_orders">Orders</string>
    <string name="main_bottom_nav_my">Me</string>
    <string name="home_balance">Balance</string>
    <string name="home_coupons">Coupons</string>
    <string name="home_credits">Credits</string>
    <string name="home_promos">Collections for you！</string>
    <string name="home_view_all">View all</string>
    <string name="home_laundry">Laundry</string>
    <string name="home_dryer">Dryer</string>
    <string name="home_service">Service</string>
    <string name="home_location">Location</string>
    <string name="home_price">Price</string>
    <string name="home_promotion">Promotion</string>
    <string name="orders">0rders</string>
    <string name="orders_no">Order No. :</string>
    <string name="orders_no_format">Order No. %s</string>
    <string name="orders_amount_format">RM %s</string>
    <string name="orders_Location">Location :</string>
    <string name="orders_MachineNo">Machine No. :</string>
    <string name="orders_Temperature">Temperature :</string>
    <string name="orders_Duration">Duration :</string>
    <string name="orders_Time">Time :</string>
    <string name="orders_Price">Price :</string>
    <string name="orders_unpaid_scan_tips">Please scan the QR code  on the machine</string>
    <string name="orders_empty_tips">You have no orders for now!</string>
    <string name="my_wallet">My Wallet</string>
    <string name="my_coupons">Coupons</string>
    <string name="my_get_rm2">Get RM2</string>
    <string name="my_introduction">Introduction</string>
    <string name="my_settings">Settings</string>
    <string name="my_feedback">Feedback</string>
    <string name="my_no_login_tips">Click here to login</string>
    <string name="my_credits">Credits %d</string>
    <string name="my_wallet_info">RM %s</string>
    <string name="my_coupons_info">x %d</string>
    <string name="personal_Personal_Infomation">Personal Infomation</string>
    <string name="personal_Profile_Picture">Profile Picture</string>
    <string name="personal_Name">Name</string>
    <string name="personal_Phone_number">Phone number</string>
    <string name="personal_Gender">Gender</string>
    <string name="personal_Birthday">Birthday</string>
    <string name="personal_Post_code">Post code</string>
    <string name="photo_open_album">Select Profile Picture</string>
    <string name="photo_open_camera">Take New Profile Picture</string>
    <string name="login_signIn">Sign in</string>
    <string name="login_signUp">Sign up</string>
    <string name="login_signIn_success_warn">Sign in success</string>
    <string name="login_signUp_success_warn">Sign up success</string>
    <string name="login_reset_psw_success_warn">Reset password success</string>
    <string name="login_signIn_fail_warn">Sign in failed</string>
    <string name="login_signUp_fail_warn">Sign up failed</string>
    <string name="login_register">Sign up</string>
    <string name="login_valitecode_time">%ds</string>
    <string name="login_get_validecode_success">Send success</string>
    <string name="login_mobile_hint">Mobile No.</string>
    <string name="login_password_hint">Password</string>
    <string name="login_forgetPassword">Forget password?</string>
    <string name="login_getCode">Get code</string>
    <string name="login_verifycation">Verifycation</string>
    <string name="login_next_step">Next step</string>
    <string name="login_change_psw_tips">Please set your login password</string>
    <string name="login_set_password_title">Set login password</string>
    <string name="login_set_password">Login password</string>
    <string name="login_set_password_enter">Enter again</string>
    <string name="login_set_password_hint">At least 6 numbers</string>
    <string name="login_set_payment_password_title">Set payment password</string>
    <string name="login_set_payment_password">Payment password</string>
    <string name="login_set_payment_password_enter">Enter again</string>
    <string name="login_login_psw_match_warn">The two login passwords do not match</string>
    <string name="login_pay_psw_match_warn">The two payment passwords do not match</string>
    <string name="booking_choose_temperature">Choose water temperature</string>
    <string name="booking_choose_time">Choose time (MIN)</string>
    <string name="booking_cold">Cold</string>
    <string name="booking_warm">Warm</string>
    <string name="booking_hot">Hot</string>
    <string name="booking_payment_unit">RM</string>
    <string name="booking_time_unit">MIN</string>
    <string name="booking_machine_no">Machine No. :</string>
    <string name="booking_temperature">Temperature :</string>
    <string name="booking_price">Price :</string>
    <string name="booking_pay">Pay RM%s</string>
    <string name="booking_pay_tips">Please enter payment password</string>
    <string name="booking_payment_IPay88">IPay88</string>
    <string name="booking_payment_Wallet">Wallet</string>
    <string name="booking_Payment_method">Payment method</string>
    <string name="booking_credits">Credits: %d</string>
    <string name="booking_Discount">Discount %sRM</string>
    <string name="booking_success_tips">Please click start on the machine!</string>
    <string name="wallet_my">My Wallet</string>
    <string name="wallet_details">Details</string>
    <string name="wallet_balance">Account balance (RM)</string>
    <string name="wallet_rc_scan">Scan to recharge</string>
    <string name="wallet_amount">Amount</string>
    <string name="wallet_recharge">Recharge</string>
    <string name="wallet_payment_setting">Payment Setting</string>
    <string name="wallet_amount_10">RM10</string>
    <string name="wallet_amount_20">RM20</string>
    <string name="wallet_amount_30">RM30</string>
    <string name="wallet_amount_50">RM50</string>
    <string name="wallet_amount_100">RM100</string>
    <string name="wallet_amount_200">RM200</string>
    <string name="wallet_scan_rc_tips">Please show this QR code to the staff</string>
    <string name="wallet_payment_check_title">Please enter original password</string>
    <string name="wallet_payment_set_title">Please set 6 digits password</string>
    <string name="wallet_payment_confirm_title">Please enter again</string>
    <string name="wallet_payment_forget_title">Verify Phone Number:</string>
    <string name="wallet_payment_check_forget">Forget password?</string>
    <string name="setting">Setting</string>
    <string name="setting_version">Version</string>
    <string name="setting_modify_pay_psw">Modify payment password</string>
    <string name="setting_forget_pay_psw">Forget payment password</string>
    <string name="setting_logout">Log out</string>
    <string name="setting_enter_payment_psw">Enter your payment password\nto verify your identity</string>
    <string name="setting_new_psw">Please set a new payment password</string>
    <string name="setting_comfirm_new_psw">Please enter again to confirm</string>
    <string name="setting_payment_psw_error">Wrong password</string>
    <string name="feedback">Feedback</string>
    <string name="feedback_option">Select a option</string>
    <string name="feedback_option_laundry">Laundry</string>
    <string name="feedback_option_dryer">Dryer</string>
    <string name="feedback_option_price">Price</string>
    <string name="feedback_option_quality">Quality</string>
    <string name="feedback_option_useprocess">Use Process</string>
    <string name="feedback_option_others">Others</string>
    <string name="feedback_comment_hint">Add a comment</string>
    <string name="feedback_submit">Submit</string>
    <string name="feedback_success">Feedback success</string>
    <string name="service">Service</string>
    <string name="service_title">SELF-SERVICE LAUNDRY MANAGEMENT</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="register_join_cleanpro">Join Cleanpro</string>
    <string name="register_join_tips">We\'ll help you create a new account in a few easy step.</string>
    <string name="register_whats_name">What\'s Your Name?</string>
    <string name="register_whats_birthday">What\'s Your Birthday?</string>
    <string name="register_whats_gender">What\'s Your Gender?</string>
    <string name="register_set_mobile">Enter Your Mobile Number</string>
    <string name="register_set_psw">Choose a Password</string>
    <string name="register_set_psw_hint">Password</string>
    <string name="register_set_psw_conf_hint">Confirm Password</string>
    <string name="register_set_psw_length_error">Please enter 6-digit password</string>
    <string name="register_set_psw_inconsistent_error">Inconsistent password, please enter again</string>
    <string name="register_set_invitation">Enter code from your friends!</string>
    <string name="register_set_invitation_hint">Invitation code</string>
    <string name="register_set_invitation_valid_error">Please enter valid invitation code!</string>
    <string name="register_whats_postcode">Postcode</string>
    <string name="register_whats_postcode_hint">eg:14100</string>
    <string name="register_first_name_hint">First Name</string>
    <string name="register_last_name_hint">Last Name</string>
    <string name="register_gender_male">Male</string>
    <string name="register_gender_female">Female</string>
    <string name="register_skip">Skip</string>
    <string name="invite_friends">Invite friends</string>
    <string name="invite_copied_toast">Copied to clipboard</string>
    <string name="invite_title">Invite your friends to Cleanpro &amp; get\nfree incentives</string>
    <string name="introduction_q1">Q1: How to use machine?</string>
    <string name="introduction_a1">There is a QR code attached on the machine, click"scan"function at the bottom of HomePage, just scan the QR code.</string>
    <string name="introduction_q2">Q2: How to recharge?</string>
    <string name="introduction_a2">There is a wallet in My Account, you can recharge by using  IPay 88.</string>
    <string name="introduction_q3">Q3: How to set payment password?</string>
    <string name="introduction_a3">In wallet, you can set your payment password, If you forget or want to change it, still here.</string>
    <string name="introduction_q4">Q4: How to add extra time for dryer machine?</string>
    <string name="introduction_a4">In  orders, click the order of dryer, there is a button that you can add time.</string>
</resources>