<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/windowBackground"
    android:orientation="vertical"
    tools:context="com.pakpobox.cleanpro.ui.my.introduction.IntroductionFragment">

    <include
        android:id="@+id/app_toolbar"
        layout="@layout/app_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/app_pading_horizontal"
            android:paddingRight="@dimen/app_pading_horizontal"
            android:paddingTop="3dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="19dp"
                android:text="@string/introduction_q1"
                android:textColor="@color/textColorPrimaryDark"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/introduction_a1"
                android:textColor="@color/textColorPrimary"
                android:textSize="13sp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="19dp"
                android:text="@string/introduction_q2"
                android:textColor="@color/textColorPrimaryDark"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/introduction_a2"
                android:textColor="@color/textColorPrimary"
                android:textSize="13sp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="19dp"
                android:text="@string/introduction_q3"
                android:textColor="@color/textColorPrimaryDark"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/introduction_a3"
                android:textColor="@color/textColorPrimary"
                android:textSize="13sp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="19dp"
                android:text="@string/introduction_q4"
                android:textColor="@color/textColorPrimaryDark"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/introduction_a4"
                android:textColor="@color/textColorPrimary"
                android:textSize="13sp"/>

        </LinearLayout>

    </ScrollView>

</LinearLayout>
