<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/windowBackground"
    android:orientation="vertical">

    <include
        layout="@layout/app_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <ScrollView
        android:id="@+id/register_content_llt"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            android:paddingLeft="@dimen/app_pading_horizontal"
            android:paddingRight="@dimen/app_pading_horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="44dp"
                android:text="@string/register_set_psw"
                android:textColor="@color/textColorEdit"
                android:textSize="17sp"
                android:textStyle="bold"/>

            <EditText
                android:id="@+id/register_password_et"
                style="@style/AppEdittext"
                android:layout_width="match_parent"
                android:layout_height="46dp"
                android:layout_marginTop="29dp"
                android:digits="0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
                android:inputType="textPassword"
                android:hint="@string/register_set_psw_hint" />

            <EditText
                android:id="@+id/register_password_confirm_et"
                style="@style/AppEdittext"
                android:layout_width="match_parent"
                android:layout_height="46dp"
                android:layout_marginTop="15dp"
                android:digits="0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
                android:inputType="textPassword"
                android:hint="@string/register_set_psw_conf_hint" />

            <Button
                android:id="@+id/register_password_next_btn"
                style="@style/AppButtonBlue"
                android:layout_width="match_parent"
                android:layout_height="46dp"
                android:layout_marginTop="35dp"
                android:enabled="true"
                android:text="@string/app_complete" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>

