<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/windowBackground"
    android:orientation="vertical"
    tools:context="com.pakpobox.cleanpro.ui.account.register.RegisterNameFragment">

    <include
        layout="@layout/app_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <ScrollView
        android:id="@+id/register_content_llt"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            android:paddingLeft="14dp"
            android:paddingRight="14dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="44dp"
                android:text="@string/register_whats_name"
                android:textColor="@color/textColorEdit"
                android:textSize="17sp"
                android:textStyle="bold"/>

            <EditText
                android:id="@+id/register_first_name_et"
                style="@style/AppEdittext"
                android:layout_width="match_parent"
                android:layout_height="46dp"
                android:layout_marginTop="29dp"
                android:digits="0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
                android:hint="@string/register_first_name_hint" />

            <EditText
                android:id="@+id/register_last_name_et"
                style="@style/AppEdittext"
                android:layout_width="match_parent"
                android:layout_height="46dp"
                android:layout_marginTop="15dp"
                android:digits="0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
                android:hint="@string/register_last_name_hint" />

            <Button
                android:id="@+id/register_name_next_btn"
                style="@style/AppButtonBlue"
                android:layout_width="match_parent"
                android:layout_height="46dp"
                android:layout_marginTop="35dp"
                android:enabled="true"
                android:text="@string/app_next" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>

