<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/windowBackground"
    android:orientation="vertical">

    <include
        layout="@layout/app_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <ScrollView
        android:id="@+id/register_content_llt"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            android:paddingLeft="14dp"
            android:paddingRight="14dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="44dp"
                android:text="@string/register_whats_postcode"
                android:textColor="@color/textColorEdit"
                android:textSize="17sp"
                android:textStyle="bold"/>

            <EditText
                android:id="@+id/register_postcode_et"
                style="@style/AppEdittext"
                android:layout_width="match_parent"
                android:layout_height="46dp"
                android:layout_marginTop="28dp"
                android:digits="0123456789"
                android:hint="@string/register_whats_postcode_hint"
                android:inputType="number"/>


            <Button
                android:id="@+id/register_postcode_next_btn"
                style="@style/AppButtonBlue"
                android:layout_width="match_parent"
                android:layout_height="46dp"
                android:layout_marginTop="98dp"
                android:enabled="true"
                android:text="@string/app_next" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>

